--- a/catalog.html
+++ b/catalog.html
@@ -127,12 +127,14 @@
     </main>
     <footer>
         <section class="top-link-footer">
-            <div class="container">
-                <ul class="footer-menu-list list-reset">
+            <div class="container position-footer">
+                <ul class="footer-menu-list list-reset footer-position-mobile">
                     <li class="footer-menu-list-item"><a href="index.html">Главная</a></li>
                     <li class="footer-menu-list-item"><a href="categori.html">Розы</a></li>
                     <li class="footer-menu-list-item"><a href="categori.html">Коробки</a></li>
-                    <li class="footer-menu-list-item"><a href="categori.html">Подарки</a></li>
+                    <li class="footer-menu-list-item footer-left-col"><a href="categori.html">Подарки</a></li>
+                </ul>
+                <ul class="footer-menu-list list-reset">
                     <li class="footer-menu-list-item"><a href="services.html" class="last-item-footer-left">Услуги</a></li>
                     <li class="footer-menu-list-item"><a href="payment.html">Оплата и доставка</a></li>
                     <li class="footer-menu-list-item"><a href="abbout-us.html">О компании</a></li>
