--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="container">
             <div class="slider-container">
                 <div class="slider-top">
-                  <div class="slider-buttons">
+                  <div class="slider-buttons slider-btn-main">
                     <button class="swiper-button-prev prev"></button>
                     <button class="swiper-button-next"></button>
                   </div>
@@ -450,7 +450,7 @@
                             <p class="why-AreWe-p">В подарок к заказу карточка с Вашим текстом</p>
                         </span>
                     </li>
-                    <li class="why-AreWe-list-item">
+                    <li class="why-AreWe-list-item text-position-why-990">
                         <span class="why-AreWe-box box-truck"></span>
                         <span class="why-AreWe-text">
                             <h3 class="why-AreWe-caption-item">Бесплатная доставка</h3>
@@ -499,12 +499,14 @@
     </main>
     <footer>
         <section class="top-link-footer">
-            <div class="container">
-                <ul class="footer-menu-list list-reset">
+            <div class="container position-footer">
+                <ul class="footer-menu-list list-reset footer-position-mobile">
                     <li class="footer-menu-list-item"><a href="index.html">Главная</a></li>
                     <li class="footer-menu-list-item"><a href="categori.html">Розы</a></li>
                     <li class="footer-menu-list-item"><a href="categori.html">Коробки</a></li>
-                    <li class="footer-menu-list-item"><a href="categori.html">Подарки</a></li>
+                    <li class="footer-menu-list-item footer-left-col"><a href="categori.html">Подарки</a></li>
+                </ul>
+                <ul class="footer-menu-list list-reset">
                     <li class="footer-menu-list-item"><a href="services.html" class="last-item-footer-left">Услуги</a></li>
                     <li class="footer-menu-list-item"><a href="payment.html">Оплата и доставка</a></li>
                     <li class="footer-menu-list-item"><a href="abbout-us.html">О компании</a></li>
